# graphics_playground

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  Makefile  README.md  a_star.html  a_star.js  a_star.wasm  ambient_occlusion.html  ambient_occlusion.js  ambient_occlusion.wasm  analyze_build_report.py  atmospheric_scattering.html  atmospheric_scattering.js  atmospheric_scattering.wasm  audio_vis.html  audio_vis.js  audio_vis.wasm  bloom_effect.html  bloom_effect.js  bloom_effect.wasm  build.sh  build.zig  build.zig.zon  cube.html  cube.js  cube.wasm  cube_sketch.ora  dtm_viewer.html  dtm_viewer.js  dtm_viewer.wasm  example.js  example.wasm  example64.js  example64.wasm  (+82 more)
src/app/: CMakeLists.txt  Image.cpp  Main.cpp  MainMenu.cpp
src/app/opengl/: BufferLayout.cpp  BufferLayoutElement.cpp  BufferLayoutElement.h  IndexBuffer.cpp  IndexBuffer.h  Model.cpp  Model.h  OpenGLModel.cpp  OpenGLModel.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Utils.cpp  Utils.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
src/app/scenes/: LegacyTriangle.cpp  LegacyTriangle.h  Scene.cpp  Scene.h  TestScene.h
src/app/scenes/a_star/: AStar.cpp  AStar.h  AStarFrag.glsl  AStarVert.glsl
src/app/scenes/audio_vis/: AudioVis.cpp  AudioVis.h  AudioVisFrag.glsl
src/app/scenes/bloom_effect/: BloomEffect.cpp  BloomEffect.h  BloomEffectFrag.glsl  BloomEffectVert.glsl  BloomFrag.glsl  BlurFrag.glsl  BlurVert.glsl  SimpleTextureFrag.glsl  SimpleTextureVert.glsl
src/app/scenes/cube/: Cube.cpp  Cube.fragment  Cube.h  CubeVert.glsl
src/app/scenes/cube_marching/: CubeMarching.cpp  CubeMarching.h
src/app/scenes/dtm_viewer/: DtmViewer.cpp  DtmViewer.h  PathFrag.glsl  PathVert.glsl  SimpleVert.glsl  TerrainFrag.glsl  TerrainVert.glsl
src/app/scenes/font_demo/: FontDemo.cpp  FontDemo.h  FontDemoFrag.glsl  FontDemoVert.glsl
src/app/scenes/graph_vis/: GraphVis.cpp  (+3 more)
src/app/shared/: Image.cpp
src/app/util/: ImGuiUtils.cpp  ImGuiUtils.h  Image.cpp  Image.h  ImageUtils.cpp  ImageUtils.h  InputData.h  MainMenu.cpp  MainMenu.h  OpenGLUtils.cpp  OpenGLUtils.h  PerlinNoise.cpp  PerlinNoise.h  RenderUtils.cpp  RenderUtils.h  ScreenRecorder.cpp  ScreenRecorder.h  TimeUtils.cpp  TimeUtils.h  Video.cpp  Video.h  VideoSaver.cpp  VideoSaver.h
src/bench/: CMakeLists.txt  GraphVisBench.cpp  MarchingCubesBench.cpp  MetaBallsBench.cpp  QuadTreeBench.cpp  XyzLoaderBench.cpp  XyzLoaderCountLinesBench.cpp  XyzLoaderLoadBench.cpp  XyzLoaderUtil.cpp
src/core/: CMakeLists.txt  Main.cpp  Main.h  Scene.cpp  Scene.h
src/core/camera/: Camera.cpp  Camera.h  FpsCamera.cpp  FpsCamera.h
src/core/fourier_transform/: Fourier.cpp
src/core/marching_cubes/: MarchingCubes.cpp  TriangulationTable.h
src/core/opengl/: BufferLayout.h  BufferLayoutElement.cpp  Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.h
src/core/quad_tree/: QuadTree.h
src/core/util/: AssertUtils.h  BoundingBox.h  Camera.cpp  Camera.h  FileUtils.cpp  ImGuiUtils.cpp  ImGuiUtils.h  ImGuiUtilsFastNoise.h  Image.cpp  Image.h  InputData.h  ModelLoader.cpp  RenderUtils.cpp  RenderUtils.h  StringUtils.h  TestUtils.h  TimeUtils.cpp  TimeUtils.h  VideoSaver.cpp
src/libs/: CMakeLists.txt
src/libs/fast_noise/: CMakeLists.txt  ImGuiUtilsFastNoise.cpp  ImGuiUtilsFastNoise.h
src/libs/glad/: CMakeLists.txt
src/libs/image/: CMakeLists.txt  Image.h  ImageOps.cpp  ImageOps.h  bmp.cpp  jpeg.cpp  png.cpp  tga.cpp
src/libs/marching_cubes/: CMakeLists.txt  MarchingCubes.cpp  MarchingCubes.h
src/libs/model/: CMakeLists.txt  Model.cpp  Model.h  ModelBench.cpp  ModelLoader.cpp  ModelLoader.h
src/libs/opengl/: CMakeLists.txt
src/libs/screen_recording/: CMakeLists.txt  ScreenRecorder.cpp  ScreenRecorder.h
src/libs/text/: CMakeLists.txt  Text.cpp  Text.h
src/libs/video/: CMakeLists.txt  VideoSaver.cpp  VideoSaver.h
src/libs/zip/: CMakeLists.txt  zip.cpp  zip.h  zip_test.cpp
src/logic/: CMakeLists.txt  RotationCommandStack.h  RubiksCube.cpp  RubiksCube.h  RubiksCubeData.h  RubiksCubeLogic.cpp  RubiksCubeLogic.h
src/logic/a_star/: AStarSolver.cpp  AStarSolver.h
src/logic/audio/: Dft.cpp  Dft.h  WavLoader.cpp  WavLoader.h
src/logic/fourier_transform/: Fourier.cpp  Fourier.h
src/logic/gis/: ShpLoader.cpp  ShpLoader.h  ShpLoaderTest.cpp  Triangulation.cpp  Triangulation.h  XyzLoader.cpp  XyzLoader.h  XyzLoaderBench.cpp
src/logic/graph_vis/: Graph.cpp  Graph.h
src/logic/marching_cubes/: MarchingCubes.cpp  MarchingCubes.h  MarchingCubesBench.cpp  TriangulationTable.h
src/logic/meta_balls/: MetaBalls.cpp  MetaBalls.h  MetaBallsBench.cpp
src/logic/model_loading/: ModelLoader.cpp  ModelLoader.h
src/logic/quad_tree/: QuadTree.h  QuadTreeBench.cpp
src/logic/ray_tracing/: RayTracer.cpp  RayTracer.h
src/logic/ray_tracing_2d/: RayTracer2D.cpp  RayTracer2D.h
src/logic/rubiks_cube/: RotationCommandStack.cpp  RotationCommandStack.h  RubiksCube.cpp  RubiksCube.h  RubiksCubeData.h  RubiksCubeLogic.cpp  RubiksCubeLogic.h
src/logic/terrain_erosion/: RainSimulation.cpp  RainSimulation.h
src/logic/util/: AssertUtils.h  BoundingBox.h  DataReadUtils.cpp  DataReadUtils.h  FileUtils.cpp  FileUtils.h  PerlinNoise.cpp  SimplexNoise.cpp  TimeUtils.cpp  TimeUtils.h  VectorUtils.h
src/scenes/dtm_viewer/: CMakeLists.txt  DtmDownloader.cpp  DtmDownloader.h  DtmDownloaderTest.cpp  DtmViewer.cpp  DtmViewer.h  ShpLoader.cpp  ShpLoader.h  ShpLoaderTest.cpp  SimpleVert.glsl  TerrainFrag.glsl  XyzLoader.cpp  XyzLoader.h  XyzLoaderCountLinesBench.cpp  XyzLoaderLoadBench.cpp  XyzLoaderTest.cpp
src/scenes/meta_balls/: CMakeLists.txt  MetaBalls.cpp  MetaBalls.h  MetaBallsBench.cpp  MetaBallsFrag.glsl  MetaBallsScene.cpp  MetaBallsScene.h  MetaBallsVert.glsl
src/test/: AStarTest.cpp  CMakeLists.txt  FourierTest.cpp  ModelLoaderTest.cpp  QuadTreeTest.cpp  RayTracer2DTest.cpp  RayTracer3DTest.cpp  RubiksCubeLogicTest.cpp  RubiksCubeTest.cpp  WavLoaderTest.cpp  main.cpp
src/test/gis/: ShpLoaderTest.cpp  XyzLoaderTest.cpp
(+462 files in other folders)
